    CHANGE - Replaced entire configuration parser (part of performance changes)
    CHANGE - dsstats data plugin can skip looking up additional Cacti data by setting dsstats_no_cacti_extras
    CHANGE - rrdtool data plugin can skip looking up additional Cacti data by setting rrdtool_no_cacti_extras
    CHANGE - Moved all database access to use PDO, to avoid PHP 7.0 issues.
    CHANGE - lots of internal changes mostly pulled over from refactoring project:
             * New WMTarget, ConfigReader, WMColour and Scale classes
             * New Manager class handles all database access for Cacti plugin
             * Data picker is rewritten
             * Rewritten drawing code for links and nodes
    FIXED - PHP 5.3 bug introduced in command-line tool in 0.98
    FIXED - RRDtool 1.5 blank line issue
    FIXED - external-script datasource cleans up line endings properly
    ADDED - SNMPv2c and SNMPv3 datasource plugins
    ADDED - Ability to take SNMP settings from Cacti devices
    ADDED - Nodes can have named offsets defined with DEFINEOFFSET. Those names can be used in the NODES command for links
            and also for positioning other nodes. Defined offsets are inherited in templates. Think of switch ports on a switch image.
    ADDED - Cacti 1.x support. Many thanks to cigamit for the initial big commit on this!

IMPORTANT NOTE for 0.98 and later - you may need to reset permissions on your users after upgrading, as I've
finally switched to the "new-style" plugin API that's been around for 5+ years. This handles
permissions differently, unfortunately.

0.98
    FIXED - MySQL error in table-creation. MySQL 5.6 is fussier.
    FIXED - Editor 'delete link' broken
    FIXED - KILO was ignored when processing %k in special tokens
    FIXED - Various fixes for PHP deprecated or strict-mode warnings
    FIXED - Line-ending trimming in 'external script' data source
    FIXED - rounding error 'kinks' in angled VIA links