@@ -20,6 +20,7 @@
         <?php echo $images_json; ?>
         <?php echo $fonts_json; ?>
         <?php echo $editor_settings; ?>
+        var $global_settings = <?php echo $global; ?>;
         var editor_url = '<?php echo $editor_name; ?>';
         var fromplug = <?php echo $fromplug ?>;
     </script>
